--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,8 @@
 .header{
     display: flex;
     background-color: #000;
-    border-top: 2px solid white;
-    border-bottom: 2px solid white;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
     position: sticky;
     width: 100%;
     top: 10px;
@@ -42,7 +42,21 @@
       .logo img{
         display: block;
         width: 50px;
-  }
+        transform: rotate(360deg);
+      }
+      @keyframes rotate {
+        from{
+          -webkit-transform: rotate(0deg);
+          -o-transform: rotate(0deg);
+          transform: rotate(0deg);
+        }
+        to{
+            -webkit-transform: rotate(360deg);
+            -o-transform: rotate(360deg);
+            transform: rotate(360deg);
+        }
+        
+      }
 
   .navbar {
     flex-basis: 70%;
@@ -63,23 +77,21 @@
       color: rgb(255, 255, 255);
       padding: 5px;
   }
-
 .navbar ul li a i{
     font-size: 20px;
     margin: 0 10px; 
     padding:5px;
     transition: 0.5s;
 }
-.navbar ul li a i:hover{
+.navbar ul li a:hover i{
     background-color: white;
     color: #000;
     border-radius: 100%;
     transform: rotate(360deg);
 }
-.navbar ul li:hover,.navbar ul li a i:hover{
-    background-color: rgb(59, 59, 59);
-    color: #000;
-}
+
+
+
 a{
     color: white;
     text-decoration: none;
