--- a/css/style.css
+++ b/css/style.css
@@ -18,11 +18,11 @@
 .header{
     display: flex;
     background-color: #000;
-    border-top: 1px solid white;
+    /* border-top: 1px solid white; */
     border-bottom: 1px solid white;
     position: sticky;
     width: 100%;
-    top: 10px;
+    /* top: 10px; */
     z-index: 2;
     
 }
