--- a/css/projects.css
+++ b/css/projects.css
@@ -78,6 +78,36 @@ h1{
     border: 5px solid white;
 }
 
+.fade-left{
+    animation: fade-left 2s ;
+    /* animation-delay: 1s; */
+}
+ @keyframes fade-left {
+        0% {
+          transform: translateX(-100px);
+          opacity: 0;
+        }
+        100% {
+          transform: translateX(0);
+          opacity: 1;
+        }
+    }
+
+.fade-right{
+    animation:fade-right 2s ;
+    /* animation-delay: 1s; */
+}
+ @keyframes fade-right {
+        0% {
+          transform: translateX(100px);
+          opacity: 0;
+        }
+        100% {
+          transform: translateX(0);
+          opacity: 1;
+        }
+    }
+
 .herobtn{
     display:inline-block;
     width: 100px;
