--- a/css/projects.css
+++ b/css/projects.css
@@ -16,7 +16,7 @@ body{
 .first{
     width: 100%;
     height: 100vh;
-    background-image: url(/bg-projects.svg);
+    background-image: url(./bg-projects.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
