--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
    body {
     min-width: 100%;
     min-height: 100vh;
-    background-image: url(./slanted-gradient.svg);
+    background-image: url(../slanted-gradient.svg);
     background-repeat: no-repeat;
     background-size: cover; 
   } 
