--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,12 @@
       padding: 0;
   }
    body {
-    min-width: 100%;
-    min-height: 100vh;
-    background-image: url(../slanted-gradient.svg);
+    width: 100%;
+    height: 100vh;
+    background-image: url(../bg-projects.svg);
     background-repeat: no-repeat;
-    background-size: cover; 
+    background-position: center;
+    background-size: cover;
   } 
 
 
@@ -250,7 +251,7 @@ button {
   z-index: 1;
   font-family: inherit;
   font-weight: bold;
-  color: #000000;
+  color: #fff;
   border-style: none;
 
  }
