--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
    body {
     width: 100%;
     height: 100vh;
-    background-image: url(../bg-projects.svg);
+    background-image: url(/slanted-gradient.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -241,7 +241,7 @@ a{
   cursor: pointer;
   position: relative;
   overflow: hidden;
-  background-color:white;
+  background-color:#777;
   text-align: center;
   text-transform: uppercase;
   font-size: 16px;
@@ -249,7 +249,6 @@ a{
   z-index: 1;
   font-family: inherit;
   font-weight: bold;
-  color: #fff;
   border-style: none;
 
  }
@@ -262,7 +261,7 @@ a{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) rotate(45deg);
-  background: #f70000;
+  background: #ff0000;
   transition: .5s ease;
   display: block;
   z-index: -1;
