--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
    body {
     width: 100%;
     height: 100vh;
-    background-image: url(/slanted-gradient.svg);
+    background-image: url(../bgprofile.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
